[package]
name = "ft_lib"
version = "1.0.3"
edition = "2021"

authors = ["Luis Soto <luissoto2094@gmail.com>"]
description = "Manual implementation of some math functions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/LuisEd2094/ft_lib_rust"
keywords = ["math", "solver"]
categories = ["mathematics"]


[dependencies]
termion = "4.0.5"


